@@ -465,6 +465,9 @@ st_effect_t st_effects[] = {
         {"mask", ST_EFF_MCHAN,
                 st_mask_getopts, st_effect_nothing, st_mask_flow,
                 st_effect_nothing_drain, st_effect_nothing},
+        {"mcompand", ST_EFF_MCHAN,
+                st_mcompand_getopts, st_mcompand_start, st_mcompand_flow,
+                st_mcompand_drain, st_mcompand_stop},
         {"pan", ST_EFF_MCHAN | ST_EFF_CHAN,
                 st_pan_getopts, st_pan_start, st_pan_flow,
                 st_effect_nothing_drain, st_pan_stop},
