@@ -487,6 +487,13 @@ int st_mask_getopts(eff_t effp, int argc, char **argv);
 int st_mask_flow(eff_t effp, st_sample_t *ibuf, st_sample_t *obuf,
                  st_size_t *isamp, st_size_t *osamp);
 
+int st_mcompand_getopts(eff_t effp, int argc, char **argv);
+int st_mcompand_start(eff_t effp);
+int st_mcompand_flow(eff_t effp, st_sample_t *ibuf, st_sample_t *obuf,
+                     st_size_t *isamp, st_size_t *osamp);
+int st_mcompand_drain(eff_t effp, st_sample_t *obuf, st_size_t *osamp);
+int st_mcompand_stop(eff_t effp);
+
 int st_pan_getopts(eff_t effp, int argc, char **argv);
 int st_pan_start(eff_t effp);
 int st_pan_flow(eff_t effp, st_sample_t *ibuf, st_sample_t *obuf,
